--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,8 +45,8 @@
    <widget class="QLabel" name="mouse_movement">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>70</y>
+      <x>1090</x>
+      <y>280</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -61,8 +61,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>50</y>
+      <x>1090</x>
+      <y>260</y>
       <width>111</width>
       <height>20</height>
      </rect>
@@ -74,8 +74,8 @@
    <widget class="QLabel" name="mouse_pressed">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>140</y>
+      <x>1090</x>
+      <y>350</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -90,8 +90,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>120</y>
+      <x>1100</x>
+      <y>330</y>
       <width>81</width>
       <height>20</height>
      </rect>
@@ -148,8 +148,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QCheckBox" name="show_axes">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>10</y>
+      <x>1090</x>
+      <y>220</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -161,8 +161,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QSpinBox" name="circle_radius">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>190</y>
+      <x>1160</x>
+      <y>400</y>
       <width>46</width>
       <height>20</height>
      </rect>
@@ -171,8 +171,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QRadioButton" name="draw_circle">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>190</y>
+      <x>1080</x>
+      <y>400</y>
       <width>81</width>
       <height>17</height>
      </rect>
@@ -252,8 +252,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="bresenham_line">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>270</y>
+      <x>715</x>
+      <y>82</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -265,8 +265,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="dda">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>270</y>
+      <x>715</x>
+      <y>42</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -307,11 +307,11 @@ background-color: rgb(255, 255, 255);</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="line_label">
     <property name="geometry">
      <rect>
-      <x>766</x>
-      <y>241</y>
+      <x>710</x>
+      <y>13</y>
       <width>121</width>
       <height>20</height>
      </rect>
@@ -321,6 +321,74 @@ background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="circle_label">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>13</y>
+      <width>131</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Circle Algorithms</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="polar_circle">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>43</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Polar</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bresenham_cicle">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>43</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Bresenham</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="cartesian_circle">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>82</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cartesian</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="midpoint_circle">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>82</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Midpoint</string>
     </property>
    </widget>
   </widget>
