--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -46,7 +46,7 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>280</y>
+      <y>330</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -62,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>260</y>
+      <y>310</y>
       <width>111</width>
       <height>20</height>
      </rect>
@@ -75,7 +75,7 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>350</y>
+      <y>400</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -91,7 +91,7 @@
     <property name="geometry">
      <rect>
       <x>1100</x>
-      <y>330</y>
+      <y>380</y>
       <width>81</width>
       <height>20</height>
      </rect>
@@ -148,8 +148,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QCheckBox" name="show_axes">
     <property name="geometry">
      <rect>
-      <x>1100</x>
-      <y>230</y>
+      <x>890</x>
+      <y>470</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -174,8 +174,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="set_point1">
     <property name="geometry">
      <rect>
-      <x>1120</x>
-      <y>120</y>
+      <x>890</x>
+      <y>600</y>
       <width>81</width>
       <height>23</height>
      </rect>
@@ -187,8 +187,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="set_point2">
     <property name="geometry">
      <rect>
-      <x>1120</x>
-      <y>150</y>
+      <x>890</x>
+      <y>630</y>
       <width>81</width>
       <height>23</height>
      </rect>
@@ -200,8 +200,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>200</y>
+      <x>730</x>
+      <y>620</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -213,8 +213,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QCheckBox" name="show_grid">
     <property name="geometry">
      <rect>
-      <x>1120</x>
-      <y>10</y>
+      <x>890</x>
+      <y>490</y>
       <width>93</width>
       <height>26</height>
      </rect>
@@ -226,8 +226,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QSpinBox" name="grid_size">
     <property name="geometry">
      <rect>
-      <x>1120</x>
-      <y>50</y>
+      <x>890</x>
+      <y>530</y>
       <width>91</width>
       <height>29</height>
      </rect>
@@ -472,6 +472,416 @@ background-color: rgb(255, 255, 255);</string>
      <string>ScanLine-Fill</string>
     </property>
    </widget>
+   <widget class="QSpinBox" name="red_color_spinbox">
+    <property name="geometry">
+     <rect>
+      <x>1150</x>
+      <y>475</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="green_color_spinbox">
+    <property name="geometry">
+     <rect>
+      <x>1150</x>
+      <y>505</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="blue_color_spinbox">
+    <property name="geometry">
+     <rect>
+      <x>1150</x>
+      <y>535</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="select_colors">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>455</y>
+      <width>91</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Select Colors</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="red_label">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>480</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>RED</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="green_label">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>510</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GREEN</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="blue_label">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>540</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>BLUE</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="boundary_fill">
+    <property name="geometry">
+     <rect>
+      <x>725</x>
+      <y>500</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Boundary Fill</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="flood_fill">
+    <property name="geometry">
+     <rect>
+      <x>725</x>
+      <y>540</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Flood Fill</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>926</x>
+      <y>39</y>
+      <width>111</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Transformation</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="translation">
+    <property name="geometry">
+     <rect>
+      <x>923</x>
+      <y>81</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Translation</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="rotation">
+    <property name="geometry">
+     <rect>
+      <x>923</x>
+      <y>111</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Rotation</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="scaling">
+    <property name="geometry">
+     <rect>
+      <x>923</x>
+      <y>141</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Scaling</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="shear">
+    <property name="geometry">
+     <rect>
+      <x>923</x>
+      <y>171</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Shear</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="reflection">
+    <property name="geometry">
+     <rect>
+      <x>923</x>
+      <y>202</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reflection</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="translation_x">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>80</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-100.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="tranlation_y">
+    <property name="geometry">
+     <rect>
+      <x>1130</x>
+      <y>80</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-100.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="rotation_angle">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>110</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>-180</number>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="scale_x">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>140</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="scale_y">
+    <property name="geometry">
+     <rect>
+      <x>1130</x>
+      <y>140</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="shear_x">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>171</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-99.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="shear_y">
+    <property name="geometry">
+     <rect>
+      <x>1130</x>
+      <y>170</y>
+      <width>44</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-99.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="check_if_x">
+    <property name="geometry">
+     <rect>
+      <x>1053</x>
+      <y>203</y>
+      <width>92</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>X-axis?</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="transform">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>30</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Draw Polygon</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="beizer_curve_button">
+    <property name="geometry">
+     <rect>
+      <x>929</x>
+      <y>239</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Beizer Curve</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="poly_clip_button">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>280</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Polygon_clipping</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="line_clipping">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>390</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>LC Cohen Sund.</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="beizer_coeff">
+    <property name="geometry">
+     <rect>
+      <x>1058</x>
+      <y>241</y>
+      <width>65</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <double>1.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="draw_lines">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>350</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Draw Lines</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="line_clipping_2">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>430</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>LC Liang Barsky</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="scanline_2">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>580</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ScanLine-Fill-2</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="clock">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>570</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clock</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -479,7 +889,7 @@ background-color: rgb(255, 255, 255);</string>
      <x>0</x>
      <y>0</y>
      <width>1219</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
